<resources>
    <string name="app_name">优教</string>
    <string name="app_version">V1.0.0</string>
    <string name="title_my">启动图片</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accompany">陪伴</string>
    <string name="training">培训班</string>
    <string name="my">我的</string>

    <!--    accompany-->
    <string name="accompany_banner">陪伴轮播图</string>
    <string name="accompany_logo_px_name">培训班</string>
    <string name="accompany_logo_tfcs_name">天赋测试</string>
    <string name="accompany_logo_nlts_name">能力提升</string>
    <string name="accompany__original_price_yuanjia">原价</string>
    <string name="accompany_weinintuijian">为您推荐</string>
    <string name="accompany_main_price_description">价格说明</string>
    <string name="accompany_main_product_features">产品特色</string>
    <string name="training_ys">已售</string>
    <string name="training_main_set_meal_tc">套餐</string>
    <string name="training_main_price_description_xz">购买须知</string>
    <string name="training_main_product_features_cpts">产品特色</string>

    <string name="training_qimengjiaoyu">阅读</string>
    <string name="training_xiaoxueba">小学霸</string>
    <string name="training_siweiqimeng">思维启蒙</string>
    <string name="yuanqi">元</string>
    <string name="leijichushuo">累计出售</string>
    <string name="riqi">日期</string>


    <string name="sign_in">立即登录</string>
    <string name="username">账 号:</string>
    <string name="password">密 码:</string>
    <string name="login_user_hint">请输入手机号/用户名</string>
    <string name="input_password">请输入登录密码</string>
    <string name="welcome_sign_in">登录</string>
    <string name="welcome_sign_new">注册</string>
</resources>
