<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.youth.banner.Banner
        android:id="@+id/training_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,4">
        <TableRow>
            <TextView/>
            <LinearLayout
                style="@style/main_AppMenuStyle">
                <ImageView
                    android:id="@+id/peixunban"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_qi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/training_qimengjiaoyu" />

            </LinearLayout>
            <LinearLayout
                style="@style/main_AppMenuStyle">

                <ImageView
                    android:id="@+id/tianfuceshi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_xiao" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/training_xiaoxueba" />

            </LinearLayout>
            <LinearLayout
                style="@style/main_AppMenuStyle">

                <ImageView
                    android:id="@+id/nenglitisheng"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_d" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/training_siweiqimeng" />

            </LinearLayout>
            <TextView/>
        </TableRow>
    </TableLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="培训班 新课上线"
    android:paddingStart="16dp"
    android:layout_margin="4dp"
    android:paddingBottom="8dp"
    android:textSize="18sp"/>
</LinearLayout>