<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.youth.banner.Banner
        android:id="@+id/accompany_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,4">
        <TableRow>
            <TextView/>
            <LinearLayout
                style="@style/main_AppMenuStyle">
                <ImageView
                    android:id="@+id/peixunban"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_j" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/accompany_logo_px_name" />

            </LinearLayout>
            <LinearLayout
                style="@style/main_AppMenuStyle">

                <ImageView
                    android:id="@+id/tianfuceshi"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_g" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/accompany_logo_tfcs_name" />

            </LinearLayout>
            <LinearLayout
                style="@style/main_AppMenuStyle">

                <ImageView
                    android:id="@+id/nenglitisheng"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo_k" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/accompany_logo_nlts_name" />

            </LinearLayout>
            <TextView/>
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/main_iv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_4"
        android:src="@drawable/weinintuijian" />
</LinearLayout>